welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:17: error: expected class or object definition
def faireV1(c: Color){
^PatternPicture:34: error: expected class or object definition
def faireV2(c: Color){
^PatternPicture:57: error: expected class or object definition
def faireV3(c: Color){
^PatternPicture:71: error: expected class or object definition
def faireV4(c: Color){
^PatternPicture:84: error: expected class or object definition
def faireMotif(){
^PatternPicture:104: error: expected class or object definition
def faireGrandMotif(){
^PatternPicture:122: error: Unmatched closing brace '}' ignored here
}
^