welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  faireGrandMotif()
  faireGrandMotif()
  }
  for(compteur <- 1 to 10){
    recule()
  }
  droite()
  avance()
  avance()
  avance()
  avance()
  avance()
  gauche()
}

def faireV1(c: Color){
  setCouleurBrosse(c:Color)
  avance()
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  gauche()
  avance()
}

def faireV2(c: Color){
  setCouleurBrosse(c:Color)
  avance()
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  droite()
  droite()
  avance()
  gauche()
  avance()
  droite()
  avance()
  avance()
  droite()
  avance()
}

def faireV3(c: Color){
  setCouleurBrosse(c:Color)
  avance()
  droite()
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  droite()
}
  
def faireV4(c: Color){
  setCouleurBrosse(c:Color)
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  gauche()
}
  
def faireMotif(){
  faireV1(Color.RED)
  faireV2(Color.BLUE)
  faireV3(Color.YELLOW)
  faireV4(Color.GREEN)
  gauche()
  avance()
  avance()
  gauche()
  avance()
  avance()
  avance()
  avance()
  avance()
  avance()
  avance()
  droite()
  droite()
}

def faireGrandMotif(){
  faireMotif()
  gauche()
  avance()
  avance()
  gauche()
  avance()
  avance()
  avance()
  avance()
  avance()
  avance()
  avance()
  droite()
  droite()
  faireMotif()
}